FIPS-9911/FIPS-14737 :: Create delta entries to fix missing/superfluous cardinality configurations
Change-Id: Ie36aa7438e99f1fdccc0b39889e8c8aea0fc2b76